; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_iommu.c_iommu_set_fault_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_iommu.c_iommu_set_fault_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_domain = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iommu_set_fault_handler(%struct.iommu_domain* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.iommu_domain*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.iommu_domain* %0, %struct.iommu_domain** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.iommu_domain*, %struct.iommu_domain** %4, align 8
  %8 = icmp ne %struct.iommu_domain* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.iommu_domain*, %struct.iommu_domain** %4, align 8
  %14 = getelementptr inbounds %struct.iommu_domain, %struct.iommu_domain* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.iommu_domain*, %struct.iommu_domain** %4, align 8
  %17 = getelementptr inbounds %struct.iommu_domain, %struct.iommu_domain* %16, i32 0, i32 0
  store i8* %15, i8** %17, align 8
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
